<resources>
    <string name="app_name">MyStoryApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="empty_email_field">Please enter your email</string>
    <string name="empty_password_field">Please enter your password</string>
    <string name="empty_name_field">Please enter your name</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_again">Hello Again!</string>
    <string name="welcome_sub">welcome, we\'ve been waiting for you</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="sign_up">Sign up</string>
    <string name="ed_name">Name</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="join_us_and_become_part_of_our_amazing_community">Join us and become part of our amazing community!</string>
    <string name="content_image">content image</string>
    <string name="username">Username</string>
    <string name="upload_date">upload date</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="story_image">story image</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim.</string>
    <string name="image_preview">Image Preview</string>
    <string name="masukkan_deskripsi_di_sini">Masukkan deskripsi di sini</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="upload">Upload</string>
    <string name="mytitle">MyTitle</string>
    <string name="close">Close</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">Map</string>
    <string name="latitude">latitude</string>
</resources>